<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zgadnij kraj po fladze</string>
    <string name="mode_prompt">Wybierz tryb gry</string>
    <string name="mode_flag_to_country">Z flagi -> kraj</string>
    <string name="mode_country_to_capital">Kraj -> stolica</string>
    <string name="mode_map_to_country">Mapa -> kraj</string>
    <string name="guess_capital_hint">Wpisz nazwę stolicy</string>
    <string name="progress_format">Pytanie %1$d/%2$d</string>
    <string name="guess_hint">Wpisz nazwę kraju</string>
    <string name="submit">Sprawdź</string>
    <string name="idk">Nie wiem</string>
    <string name="empty_prompt">Wpisz odpowiedź lub kliknij \'Nie wiem\'.</string>
    <string name="correct">Poprawna odpowiedź!</string>
    <string name="wrong_format">Błędnie. Poprawna odpowiedź: %1$s</string>
    <string name="result_format">Koniec! Twój wynik: %1$d/%2$d</string>
    <string name="correct_header">Poprawne odpowiedzi</string>
    <string name="wrong_header">Błędne odpowiedzi</string>
    <string name="correct_label">Poprawnie: %1$s</string>
    <string name="your_label">Twoja odpowiedź: %1$s</string>
    <string name="restart">Zagraj ponownie</string>
    <string name="question">Pytanie %1$d/%2$d</string>
    <string name="check">Sprawdź</string>
    <string name="see_result">Zobacz wynik</string>
    <string name="next">Następne</string>
    <string name="polish_flag">🇵🇱</string>
    <string name="cancel">Anuluj grę</string>
    <string name="map_mode">Zgadnij kraj po granicach</string>
</resources>
